--- a/Unic.Bob.Muck.nuspec
+++ b/Unic.Bob.Muck.nuspec
@@ -8,7 +8,10 @@
       <iconUrl>https://www.unic.com/img/unic-logo.png</iconUrl>
       <requireLicenseAcceptance>false</requireLicenseAcceptance>
       <description>Muck provides local deployment functionallity</description>
-    </metadata>
+      <dependencies>
+        <dependency id="Unic.Bob.Config" />
+      </dependencies>
+  </metadata>
     <files>
       <file src="src\**"   />
     </files>
