fixed bug in xml transform

--- a/samples/sitecore-website/Muck.Website/Muck.Website.csproj
+++ b/samples/sitecore-website/Muck.Website/Muck.Website.csproj
@@ -62,6 +62,7 @@
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Web.local.author.config" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
