--- a/Unic.Bob.Muck.nuspec
+++ b/Unic.Bob.Muck.nuspec
@@ -14,6 +14,6 @@
   </metadata>
     <files>
       <file src="src\**" />
-      <file src="packages\**" target="build\muck\packages" />
+      <file src="packages\**" target="build\muck\packages" exclude="**\package\services\metadata\core-properties\**;**\Unic.Bob.Keith\**;**\pester\**" />
     </files>
   </package>
