--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
   nuget_packageId: Unic.Bob.Muck
 
 install:
-  - choco install gitversion.portable -pre -y
+  - choco install gitversion.portable -y
 
 assembly_info:
   patch: false
@@ -11,11 +11,14 @@ assembly_info:
 before_build:
   - nuget restore
   - ps: gitversion /l console /output buildserver
+
+build:
   - ps: . .\restore.ps1
 
-
-build: off
-
+after_build:
+  - cmd: ECHO nuget pack %nuspec% -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
+#  - cmd: nuget pack %nuspec% -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
+#  - cmd: appveyor PushArtifact "%nuget_packageId%.%GitVersion_NuGetVersion%.nupkg"
 
 #before_test:
 #  - ps: Import-Module "./packages/pester/tools/pester.psm1"
@@ -24,7 +27,3 @@ build: off
 #  - ps: Invoke-Pester ./src -OutputFile TestResults.xml -OutputFormat NUnitXml -EnableExit
 
 
-after_build:
-  - cmd: ECHO nuget pack %nuspec% -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
-#  - cmd: nuget pack %nuspec% -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
-#  - cmd: appveyor PushArtifact "%nuget_packageId%.%GitVersion_NuGetVersion%.nupkg"
