--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,8 @@ environment:
     secure: gJWu6tlxq9hCQZ20SSyX7g==
   PAKET_PASSWORD:
     secure: GrAGau+8oESef/W0sTTmvA==
-  Nuspec_File: .\Unic.Bob.Muck.nuspec
+  NuGet_PackageId: Unic.Bob.Muck
+  Nuspec_File: .\%NuGet_PackageId%.nuspec
   Artefact_Output_Dir: .\output
 
 install:
@@ -13,7 +14,7 @@ install:
   - ps: gitversion /l console /output buildserver
   - ps: . .\restore.ps1
   - cmd: nuget pack %Nuspec_File% -version "%GitVersion_NuGetVersionV2%" -OutputDirectory %Artefact_Output_Dir%
-  - cmd: appveyor PushArtifact %Artefact_Output_Dir%%nuget_packageId%.%GitVersion_NuGetVersion%.nupkg"
+  - cmd: appveyor PushArtifact %Artefact_Output_Dir%\%NuGet_PackageId%.%GitVersion_NuGetVersionV2%.nupkg"
 
 assembly_info:
   patch: false
