--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,3 +27,10 @@ build: off
 
 test_script:
   - ps: .\run-tests.ps1
+  
+deploy:
+- provider: NuGet
+  api_key:
+    secure: HBsvV7KwZeYdPrZIHlU4PEarV1YAGPCMnxBC8z+l9iojRrgCWTlIXCG0zIR+Y1FE
+  on:
+    branch: master
