--- a/Unic.Bob.Muck.nuspec
+++ b/Unic.Bob.Muck.nuspec
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
-  <package >
-    <metadata>
-      <id>Unic.Bob.Muck</id>
-      <authors>Unic AG</authors>
-      <version>$VERSION$</version>
-      <owners>Unic AG</owners>
-      <iconUrl>https://www.unic.com/img/unic-logo.png</iconUrl>
-      <requireLicenseAcceptance>false</requireLicenseAcceptance>
-      <description>Muck provides local deployment functionallity</description>
-  </metadata>
-    <files>
-      <file src="src\**" />
-      <file src="packages\**" target="build\muck\packages" exclude="**\package\services\metadata\core-properties\**;**\Unic.Bob.Keith\**;**\pester\**" />
-    </files>
-  </package>
+<package >
+  <metadata>
+    <id>Unic.Bob.Muck</id>
+    <authors>Unic AG</authors>
+    <version>$VERSION$</version>
+    <owners>Unic AG</owners>
+    <iconUrl>https://github.com/unic/unic/raw/master/unic_nuget.png</iconUrl>
+    <projectUrl>https://github.com/unic/bob-muck</projectUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Muck provides local deployment functionallity</description>
+</metadata>
+  <files>
+    <file src="src\**" />
+    <file src="packages\**" target="build\muck\packages" exclude="**\package\services\metadata\core-properties\**;**[Content_Types].xml;**\_rels\**;**\Unic.Bob.Keith\**;**\pester\**" />
+  </files>
+</package>
